@@ -1,6 +1,7 @@
 ======================
+    FIXED: KrSearch crash at pressing Escape or Closing the window during search
     ADDED: Tab-browsing shortens tabs when more tabs are created
-    FIXED: 
+    FIXED:
     FIXED: cmdline would start-up focused on the wrong panel
     FIXED: when pressing ctrl-enter (or ctrl-shift-enter), focus goes to command line
     ADDED: Starting Krusader with root privileges by pressing Alt+K
